<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.bd_app.viewmodel.BookViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:padding="20dp"
        tools:context=".view.fragment.BookDetailsFragment"
        >

        <TextView
            android:id="@+id/textViewDetailsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detailBook"
            android:textColor="@color/primaryText"
            android:textSize="25sp"
            android:layout_marginBottom="50dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/cardViewDetailsBook"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewDetailsBook"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?selectableItemBackground"
            android:backgroundTint="@color/cardView"
            app:cardCornerRadius="10dp"
            android:elevation="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewDetailsTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/buttonDelete">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textViewBookName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bookName"
                    android:textColor="@color/secondaryText"
                    android:padding="5dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/textViewBookPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bookPrice"
                    android:textColor="@color/secondaryText"
                    android:padding="5dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/textViewBookName"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/textViewBookGenre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bookGenre"
                    android:textColor="@color/secondaryText"
                    android:padding="5dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/textViewBookPrice"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/textViewBookAuthor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bookAuthor"
                    android:textColor="@color/secondaryText"
                    android:padding="5dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/textViewBookGenre"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/textViewBookNamePH"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/secondaryText"
                    android:padding="5dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/textViewBookPricePH"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/secondaryText"
                    android:padding="5dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/textViewBookName"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/textViewBookGenrePH"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/secondaryText"
                    android:padding="5dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/textViewBookPrice"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/textViewBookAuthorPH"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/secondaryText"
                    android:padding="5dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/textViewBookGenre"
                    app:layout_constraintEnd_toEndOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/buttonEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="8dp"
            android:text="Editar"
            android:backgroundTint="@color/editColor"
            app:layout_constraintTop_toBottomOf="@id/cardViewDetailsBook"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/buttonDelete"/>

        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="8dp"
            android:text="Eliminar"
            android:backgroundTint="@color/deleteColor"
            app:layout_constraintTop_toBottomOf="@id/cardViewDetailsBook"
            app:layout_constraintStart_toEndOf="@id/buttonEdit"
            app:layout_constraintEnd_toEndOf="parent"/>






    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>